fixed overflow bug

--- a/public/styles.css
+++ b/public/styles.css
@@ -7,7 +7,9 @@
 
     color:white;
     margin:0%;
+    overflow-x:hidden;
 } 
+
 #homePage{
     /* position: relative; */
     padding:10%;
